--- a/service.html
+++ b/service.html
@@ -289,141 +289,123 @@
     </div>
     <!-- Testimonial End -->
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-footer bg-primary text-white mt-5">
-      <div class="container">
-        <div class="row gx-5">
-          <div class="col-lg-8 col-md-6">
-            <div class="row gx-5">
-              <div class="col-lg-4 col-md-12 pt-5 mb-5">
-                <h4 class="text-white mb-4">Get In Touch</h4>
-                <div class="d-flex mb-2">
-                  <i class="bi bi-geo-alt text-white me-2"></i>
-                  <p class="text-white mb-0">123 Street, New York, USA</p>
-                </div>
-                <div class="d-flex mb-2">
-                  <i class="bi bi-envelope-open text-white me-2"></i>
-                  <p class="text-white mb-0">info@example.com</p>
-                </div>
-                <div class="d-flex mb-2">
-                  <i class="bi bi-telephone text-white me-2"></i>
-                  <p class="text-white mb-0">+012 345 67890</p>
-                </div>
-                <div class="d-flex mt-4">
-                  <a
-                    class="btn btn-secondary btn-square rounded-circle me-2"
-                    href="#"
-                    ><i class="fab fa-twitter"></i
-                  ></a>
-                  <a
-                    class="btn btn-secondary btn-square rounded-circle me-2"
-                    href="#"
-                    ><i class="fab fa-facebook-f"></i
-                  ></a>
-                  <a
-                    class="btn btn-secondary btn-square rounded-circle me-2"
-                    href="#"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                  <a
-                    class="btn btn-secondary btn-square rounded-circle"
-                    href="#"
-                    ><i class="fab fa-instagram"></i
-                  ></a>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                <h4 class="text-white mb-4">Quick Links</h4>
-                <div class="d-flex flex-column justify-content-start">
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Home</a
-                  >
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>About
-                    Us</a
-                  >
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Our
-                    Services</a
-                  >
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Meet The
-                    Team</a
-                  >
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Latest
-                    Blog</a
-                  >
-                  <a class="text-white" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Contact
-                    Us</a
-                  >
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                <h4 class="text-white mb-4">Popular Links</h4>
-                <div class="d-flex flex-column justify-content-start">
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Home</a
-                  >
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>About
-                    Us</a
-                  >
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Our
-                    Services</a
-                  >
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Meet The
-                    Team</a
-                  >
-                  <a class="text-white mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Latest
-                    Blog</a
-                  >
-                  <a class="text-white" href="#"
-                    ><i class="bi bi-arrow-right text-white me-2"></i>Contact
-                    Us</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mt-lg-n5">
-            <div
-              class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-secondary p-5"
+    <!-- 
+    - #FOOTER
+  -->
+
+    <footer class="footer">
+      <div class="container grid-list">
+        <div class="footer-brand">
+          <a href="#" class="logo">
+            <img
+              src="./assets/images/logopetanimuda.png"
+              width="74"
+              height="24"
+              alt="Adex home"
+            />
+          </a>
+
+          <p class="footer-text">
+            &copy; 2024 PT Bazma Corporation Berdikari. <br />
+            All rights reserved.
+          </p>
+
+          <ul class="social-list">
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="social-link">
+                <ion-icon name="logo-youtube"></ion-icon>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <ul class="footer-list">
+          <li>
+            <p class="h4 footer-list-title">Alamat Kantor</p>
+          </li>
+
+          <li>
+            <address class="footer-text">
+              Jl. Suging Klabangkara , Tegal, Indonesia
+            </address>
+          </li>
+
+          <li>
+            <a href="mailto:info@email.com" class="footer-link"
+              >petanimilenial.indo@gmail.com</a
             >
-              <h4 class="text-white">Newsletter</h4>
-              <h6 class="text-white">Subscribe Our Newsletter</h6>
-              <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
-              <form action="">
-                <div class="input-group">
-                  <input
-                    type="text"
-                    class="form-control border-white p-3"
-                    placeholder="Your Email"
-                  />
-                  <button class="btn btn-primary">Sign Up</button>
-                </div>
-              </form>
-            </div>
-          </div>
+          </li>
+
+          <li>
+            <a href="tel:001234567890" class="footer-link">082324757905</a>
+          </li>
+        </ul>
+
+        <ul class="footer-list">
+          <li>
+            <p class="h4 footer-list-title">Selengkapnya</p>
+          </li>
+
+          <li>
+            <a href="#" class="footer-link">About Us</a>
+          </li>
+
+          <li>
+            <a href="#" class="footer-link">Our Story</a>
+          </li>
+
+          <li>
+            <a href="#projek" class="footer-link">Projects</a>
+          </li>
+
+          <li>
+            <a href="#" class="footer-link">Terms of Use</a>
+          </li>
+
+          <li>
+            <a href="#" class="footer-link">Privacy Policy</a>
+          </li>
+        </ul>
+
+        <div class="footer-list">
+          <p class="h4 footer-list-title">Surat Kabar Kami</p>
+
+          <p class="footer-text">
+            Berlangganan surat kabar kami untuk mendapatkan berita & penawaran
+            kami dikirimkan kepada Anda.
+          </p>
+
+          <form action="send_email.php" method="post" class="input-wrapper">
+            <input
+              type="email"
+              name="email"
+              placeholder="Alamat Email"
+              required
+              class="input-field"
+            />
+            <button type="submit" class="submit-btn">Gabung</button>
+          </form>
         </div>
       </div>
-    </div>
-    <div class="container-fluid bg-dark text-white py-4">
-      <div class="container text-center">
-        <p class="mb-0">
-          &copy; <a class="text-secondary fw-bold" href="#">Your Site Name</a>.
-          All Rights Reserved. Designed by
-          <a class="text-secondary fw-bold" href="https://htmlcodex.com"
-            >HTML Codex</a
-          >
-        </p>
-      </div>
-    </div>
-    <!-- Footer End -->
+    </footer>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-secondary py-3 fs-4 back-to-top"
